[project]
name = "aiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-extractive-summarizer>=0.10.1",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "flashrank>=0.2.10",
    "keybert>=0.9.0",
    "langchain>=1.2.10",
    "langchain-aws>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.0.10",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "transformers>=5.3.0",
    "unstructured>=0.21.5",
    "unstructured-inference>=1.6.11",
    "unstructured-pytesseract>=0.3.15",
    "youtube-transcript-api>=1.2.4",
]
